# phoenix-avionics

./: .code-workspace  .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  FreeRTOSConfig.h  Makefile  README.md  build.bat  cmake-variants.yaml  docker-compose.yml  flash.bat  phoenix-avionics.code-workspace  sensors.json.bak
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
GSU/: README.md  gsu_norb_dict.py  mission_control.py  obc_monitor.py  rs485_app_lib.py
GSU/static/: worker.js
GSU/templates/: index.html  norb_listener.html
HILNode/: CMakeLists.txt
HILNode/src/: main.c
OBC/: .gitignore  CMakeLists.txt  CMakePresets.json  FreeRTOSConfig.h  README.md  cmake-variants.yaml  phoenix-avionics.code-workspace
OBC/bsp/: bsp_init.c
OBC/docs/: gsu_norb_listener_roadmap.md  sensor_ekf_roadmap.md
OBC/hal/: platform_hal.c  platform_hal.h  rs485_hal.c  rs485_hal.h
OBC/lib/: CMakeLists.txt
OBC/lib/phoenix-icd/include/: phoenix_icd.h
OBC/msg/: ekf_params.msg  eps_measurements.msg  obc_ident.msg  sensor_imu.msg  vehicle_imu.msg  vehicle_state.msg
OBC/scripts/: plot_ekf_mission.py
OBC/src/: logging.h  main.c
OBC/src/modules/datalink/: datalink.c  datalink.h  norb_streamer.c  norb_streamer.h  receiver.c  tctlm.c
OBC/src/modules/estimator/: CMakeLists.txt  ekf.c  ekf_core.c  ekf_core.h  ekf_state.c  ekf_state.h  estimator.h
OBC/src/modules/estimator/ekf_math/: generate_eskf_math.py  symforce_wrapper.cpp  symforce_wrapper.h
OBC/src/modules/estimator/fusion/: baro_fuse.c  baro_fuse.h  gps_fuse.c  gps_fuse.h  imu_predictor.c  imu_predictor.h  mag_fuse.c  mag_fuse.h
OBC/src/modules/estimator/math/: ekf_math.c  ekf_math.h
OBC/src/modules/estimator/tests/: plot_csv_results.py  plot_ekf_mission.py  test_csv_runner.c  test_ekf_advanced.c  test_ekf_core.c  test_ekf_dynamic.c  test_ekf_export.c  test_ekf_faults.c  test_ekf_fusion.c  test_ekf_predict.c  test_ekf_predict.cpp  test_ekf_state.c  test_main.c  test_mission_profile.c  test_utils.c  test_utils.h
OBC/src/modules/estimator/tests/plots/: csv_runner_log.txt
OBC/src/modules/housekeeping/: housekeeping.c
OBC/src/modules/sensors/: imu.c  integrator.c  sensor_config.h  sensors.c  sensors.h
OBC/src/modules/tctlm/: tctlm.c
OBC/src/norb/: norb.c  norb.h  topics.h
OBC/src/norb/msg/: barometer.msg  eps_ident.msg  eps_power_status.msg  obc_log_level.msg  tracking_radio_ident.msg
OBC/tools/: generate_norb_topics.py
apps/hil-node/: CMakeLists.txt
apps/hil-node/include/: i2c.h
apps/hil-node/src/: i2c.c  main.c
apps/main-obc/: CMakeLists.txt
apps/main-obc/include/: telemetry.h  telemetry_defs.h
apps/main-obc/include/core/: debug_cli.h  eps_data.h  eps_node.h  logging.h  obc_data.h  rocket_data.h  rs485_monitor.h  tracking_radio_node.h
apps/main-obc/include/hal/: rs485_hal.h
apps/main-obc/src/: main.c  tctlm.c
apps/main-obc/src/bsp/: bsp_init.c
apps/main-obc/src/core/: debug_cli.c  eps_data.c  eps_node.c  obc_commands.c  obc_data.c  rocket_data.c  rs485_monitor.c  tracking_radio_node.c  usb_console.c
apps/main-obc/src/hal/: platform_hal.c  rs485_hal.c
apps/sensor-node/: CMakeLists.txt
apps/sensor-node/src/: main.c
bsp/: bsp_init.c
common/: logging_shim.c  sensors.json  usb_console.c
common/include/: hil_protocol.h  logging.h  sensor_config.h  telemetry_defs.h  usb_console.h
common/include/protocol/: phoenix_protocol_version.h  phoenix_tctlm_ids.h
common/protocol/: eps_payloads.h  phoenix_node_addrs.h  phoenix_tctlm_payloads.h  radio_payloads.h  telemetry_defs.h
docs/: DOCKER_SETUP.md  SIL_USAGE.md  TCTLM.xlsx
hal/: platform_hal.c  rs485_hal.c  rs485_hal.h
include/: FreeRTOSConfig.h  rs485_hal.h  serial.h  system_data.h  telemetry_defs.h  usb_console.h
include/core/: eps_node.h  logging.h  logging_shim.h  obc_commands.h  obc_data.h  rocket_data.h  rs485_monitor.h  system_data.h  usb_console.h
include/hal/: platform_hal.h
phoenix-gsu/: rockchip_streamer.py  sensor_config.py  server.py  this-folder-is-synced-from-phoenix-avionics-repo.txt
phoenix-gsu/common/: telemetry_structs.py
rockchip/: cmd_get_ident.py  cmd_set_log.py  cmd_test.py  monitor_logs.py  obc_monitor.py  rockchip_streamer.py  run_hil.sh  sensor_config.py  test_udp.py
rockchip/common/: esl_framer.py  telemetry_defs.py
scripts/: build.sh  clean.sh  flash.sh  monitor.sh  setup-submodules.sh
src/: CMakeLists.txt  baroMS5607.c  baroMS5607.h  command_handler.c  command_handler.h  i2c.c  i2c.h  main.c  rs485_hal.c  serial.c  serial.h  system_data.c  tctlm.c  usb_console.c
src/bsp/: bsp_init.c  bsp_init.h
src/common/: pubsub.c  pubsub.h  topics.h
src/core/: logging_shim.c  rocket_data.c  system_data.c  usb_console.c
src/hal/: platform_hal.c  platform_hal.h  rs485_hal.c
src/modules/communication/: command_handler_task.c  obc_commands.c  obc_commands.h  rs485_monitor.c  rs485_monitor.h  rs485_task.c  rs485_task.h  tctlm.c  telemetry_task.c  telemetry_task.h
src/modules/data_store/: obc_data.c  obc_data.h  rocket_data.c  rocket_data.h
src/modules/datalink/: datalink.c
src/modules/eps/: eps.c  eps.h
src/modules/estimator/: ekf.c
src/modules/flight_control/: flight_control.c  flight_control.h  pilot_tasks.c
src/modules/housekeeping/: housekeeping.c  housekeeping.h
src/modules/nodes/eps/: eps.c  eps.h
src/modules/nodes/tracking_radio/: tracking_radio.c  tracking_radio.h
src/modules/sensors/: imu.c
src/modules/subsystems/: eps_node.c  tracking_radio_node.c  tracking_radio_node.h
src/modules/tracking_radio/: tracking_radio.c  tracking_radio.h
src/norb/: topics.h
src/norb/topic_defs/: sensor_imu.h
src/tasks/: eps_polling_task.c  eps_polling_task.h  heartbeat_task.c  heartbeat_task.h  hil_sensor_task.c  identification_polling_task.c  queue_manager.c  queue_manager.h  rs485_task.c  rs485_task.h  sensors_task.c  sensors_task.h  task_manager.c  task_manager.h  telemetry_task.c  telemetry_task.h
tools/: deploy_rockchip.sh  gen_sensors.py  gen_telemetry.py  rs485_lib.py  test_ping.py  test_sil_rs485.py  test_telemetry.py
(+23 files in other folders)
