# Libraries shared across applications
# This file can be used to add_subdirectory for libraries that have their own CMakeLists.txt
# or to define libraries for the ones that don't.

# esl-sensors has its own CMakeLists.txt (though it might need adjustment)
# add_subdirectory(esl-sensors) 

# For now, we will leave this empty as the apps are currently pointing 
# to the library source files directly.
