###########################################
# Estimator Module — Standalone Library
###########################################
#
# This CMakeLists owns:
#   - Eigen3 resolution  (system → local cache → FetchContent)
#   - SymForce code generation  (output → estimator/gen/)
#   - estimator_lib static library  (ekf_core + imu_predictor + symforce wrapper)
#   - test_ekf_predict executable  (HOST builds only — no FreeRTOS, no Pico SDK)
#
# The root CMakeLists only needs:
#   add_subdirectory(src/modules/estimator)
#   target_link_libraries(${TARGET_NAME} PRIVATE estimator_lib)
###########################################

# --- Eigen3 resolution ---
# Priority: 1) system install  2) lib/eigen3 cache  3) FetchContent download
find_package(Eigen3 3.4 QUIET NO_MODULE)
if(Eigen3_FOUND)
    message(STATUS "[estimator] Found system Eigen3: ${EIGEN3_INCLUDE_DIR}")
else()
    set(EIGEN3_LOCAL_PATH ${CMAKE_SOURCE_DIR}/lib/eigen3)
    if(EXISTS "${EIGEN3_LOCAL_PATH}/Eigen/Core")
        message(STATUS "[estimator] Using cached Eigen3 at: ${EIGEN3_LOCAL_PATH}")
        set(EIGEN3_INCLUDE_DIR ${EIGEN3_LOCAL_PATH})
    else()
        if(EXISTS "${EIGEN3_LOCAL_PATH}")
            file(REMOVE_RECURSE "${EIGEN3_LOCAL_PATH}")
        endif()
        message(STATUS "[estimator] Eigen3 not found. Downloading from GitLab...")
        include(FetchContent)
        FetchContent_Declare(eigen
            GIT_REPOSITORY https://gitlab.com/libeigen/eigen.git
            GIT_TAG 3.4.0
            GIT_SHALLOW TRUE
            SOURCE_DIR ${EIGEN3_LOCAL_PATH}
        )
        set(EIGEN_BUILD_DOC       OFF CACHE BOOL "" FORCE)
        set(BUILD_TESTING         OFF CACHE BOOL "" FORCE)
        set(EIGEN_BUILD_PKGCONFIG OFF CACHE BOOL "" FORCE)
        FetchContent_MakeAvailable(eigen)
        set(EIGEN3_INCLUDE_DIR ${EIGEN3_LOCAL_PATH})
    endif()
endif()

# Propagate to parent scope so root CMakeLists can reference it if needed
set(EIGEN3_INCLUDE_DIR ${EIGEN3_INCLUDE_DIR} PARENT_SCOPE)

# --- SymForce Code Generation ---
# Output lives inside the module directory so the estimator is fully self-contained.
set(ESTIMATOR_DIR   ${CMAKE_CURRENT_SOURCE_DIR})
set(EKF_GEN_DIR     ${ESTIMATOR_DIR}/gen)
set(EKF_GEN_SCRIPT  ${ESTIMATOR_DIR}/ekf_math/generate_eskf_math.py)
set(EKF_GEN_FILES
    ${EKF_GEN_DIR}/cpp/symforce/sym/predict_covariance.h
    ${EKF_GEN_DIR}/cpp/symforce/sym/predict_covariance.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_stationary.h
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_stationary.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_baro.h
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_baro.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_gps.h
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_gps.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_mag.h
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_mag.cc
)

set(VENV_PYTHON ${CMAKE_SOURCE_DIR}/.venv/bin/python3)

add_custom_command(
    OUTPUT  ${EKF_GEN_FILES}
    COMMAND ${VENV_PYTHON} ${EKF_GEN_SCRIPT}
    DEPENDS ${EKF_GEN_SCRIPT}
    WORKING_DIRECTORY ${ESTIMATOR_DIR}
    COMMENT "[estimator] Generating ESKF math via SymForce..."
    VERBATIM
)

add_custom_target(generate_ekf_math DEPENDS ${EKF_GEN_FILES})

# --- estimator_lib static library ---
add_library(estimator_lib STATIC
    ekf_core.c
    ekf_state.c
    fusion/imu_predictor.c
    fusion/baro_fuse.c
    fusion/gps_fuse.c
    fusion/mag_fuse.c
    ekf_math/symforce_wrapper.cpp
    ${EKF_GEN_DIR}/cpp/symforce/sym/predict_covariance.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_stationary.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_baro.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_gps.cc
    ${EKF_GEN_DIR}/cpp/symforce/sym/update_mag.cc
)

add_dependencies(estimator_lib generate_ekf_math)

target_include_directories(estimator_lib
    PUBLIC
        ${ESTIMATOR_DIR}                         # ekf_core.h, estimator.h
        ${ESTIMATOR_DIR}/fusion                  # imu_predictor.h
        ${ESTIMATOR_DIR}/ekf_math                # symforce_wrapper.h
        ${EKF_GEN_DIR}/cpp/symforce              # Generated math headers
    PRIVATE
        ${EIGEN3_INCLUDE_DIR}                    # Eigen — internal implementation detail
        ${CMAKE_BINARY_DIR}/norb_generated       # vehicle_imu.h (generated by norb_generate)
        ${CMAKE_SOURCE_DIR}/lib/phoenix-icd/include
)

# imu_predictor.c uses vehicle_imu.h from nORB generation.
# The dependency is wired from the root CMakeLists after norb_generate is defined:
#   add_dependencies(estimator_lib norb_generate)

# --- Unit Tests (HOST builds only) ---
if(BUILD_FOR_HOST)
    add_executable(run_ekf_tests_bin
        tests/test_main.c
        tests/test_utils.c
        tests/test_ekf_core.c
        tests/test_ekf_fusion.c
        tests/test_ekf_dynamic.c
        tests/test_ekf_faults.c
        tests/test_ekf_state.c
        tests/test_ekf_advanced.c
        tests/test_mission_profile.c
    )

    target_include_directories(run_ekf_tests_bin PRIVATE
        ${ESTIMATOR_DIR}
        ${ESTIMATOR_DIR}/fusion
        ${ESTIMATOR_DIR}/ekf_math
        ${EKF_GEN_DIR}/cpp/symforce
        ${CMAKE_BINARY_DIR}/norb_generated
    )

    target_link_libraries(run_ekf_tests_bin PRIVATE estimator_lib m)

    # Convenience target: cmake --build build_host --target run_ekf_tests
    add_custom_target(run_ekf_tests
        COMMAND run_ekf_tests_bin
        DEPENDS run_ekf_tests_bin
        COMMENT "[estimator] Running EKF unit tests..."
        USES_TERMINAL
    )

    # ── EKF CSV export binary ──────────────────────────────────────────────
    # Runs the same 60-second mission profile as test_mission_profile.c but
    # writes every timestep to ekf_mission_data.csv for offline visualisation.
    # Usage: cmake --build build_host --target run_ekf_export
    # Then:  python3 scripts/plot_ekf_mission.py
    add_executable(run_ekf_export_bin
        tests/test_ekf_export.c
        tests/test_utils.c
    )

    target_include_directories(run_ekf_export_bin PRIVATE
        ${ESTIMATOR_DIR}
        ${ESTIMATOR_DIR}/fusion
        ${ESTIMATOR_DIR}/ekf_math
        ${EKF_GEN_DIR}/cpp/symforce
        ${CMAKE_BINARY_DIR}/norb_generated
    )

    target_link_libraries(run_ekf_export_bin PRIVATE estimator_lib m)

    # Convenience target: cmake --build build_host --target run_ekf_export
    # The binary is run from CMAKE_BINARY_DIR so the CSV lands at build_host/ekf_mission_data.csv.
    add_custom_target(run_ekf_export
        COMMAND run_ekf_export_bin
        DEPENDS run_ekf_export_bin
        WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
        COMMENT "[estimator] Exporting EKF mission data to build_host/ekf_mission_data.csv..."
        USES_TERMINAL
    )

    message(STATUS "[estimator] HOST build: run_ekf_tests_bin and run_ekf_tests targets registered.")
    message(STATUS "[estimator] HOST build: run_ekf_export_bin and run_ekf_export targets registered.")
endif()
